# PDM-Template

./: .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  README.md  pyproject.toml
.github/actions/ci-setup/: action.yml
.github/workflows/: check.yml  deploy.yml
tests/: test_main.py
